# website

./: .dockerignore  .env.template  .eslintrc.json  .gitignore  .prettierrc.js  AGENTS.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  flake.nix  package-lock.json  package.json  result-schema  turbo.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: build-hhai-dev-www.yml  ci-cd.yml  container-ci-cd.yml  container-ci.yml  delete-package-versions.yml  deploy.yml  hhai-dev-www.yml  nix.yml
.sqlx/: query-03c4796d95247652f70463ad8c171053b3c9ee337cb61dc603bc907fb4a4c34f.json  query-0b6ad7987c2da4e56cd406a76343114e9b2a8e622ec9b1cce35e85b742b37b7b.json  query-1d716a0eb9bda6da9e0b7987616c1d30e1635e71cd43f074011a98ae695ce73d.json  query-2598867e81522235c9a5cfebdbec39e1b9a1541fa4379efd6705a89aa449b251.json  query-2708153a3a812b0c66da2ab1b56942367c2311b5384b22fcb2d792c77921bd36.json  query-28e526c7ffaeca3cb33f8f70dccbca01972d568efdbc52e4bb2719fe1ae543d0.json  query-3dddcd61f45bf09d3680b661fc6188d9a6b2bdbb36741122ce84681bd3c18b0c.json  query-57532131f864676424b950c63bb7a9ef0e91382ec1ea74b72a65486c94788849.json  query-67a2b40e5d2a9cd1f02eb990c6dc36a5c01c5818b91494d782ad0384675db5e9.json  query-6e524cdbfd88bbfc8f266242cccb14686f0de6ba0073d014d8ab71afed4d0a93.json  query-7864a1b6b97a6b22e7191a8ed7fd9b2b7905ea62c0b648685d82b825aee3a25a.json  query-7bc3adf08f9b51eb68a10439845e2205218218e3e7a7f836dfb7d2e51ec7b6b5.json  query-88d711144dbb7dd5fa0ba43f8d577a4d500d91da0f3acbc36a31920e3faeff93.json  query-8d38722f677b22506a012771910d4e28173c925558ca07469ae8a6b037a6556e.json  query-91ca5e86267fda4261ee52de537ad15d6b507dc6eaff5a0ab10aebb3f984d994.json  query-bba7157b1373e28f4d1e0473357c0adffda75b19a80905f1b6d8809833b9ef1e.json  query-bcaa4b8f4a92c1a2fb0a9a3a10e975977d5863c06dba04cb9f7d6e612e1d3054.json  query-d50f76005009518005c8cea6e81018f4bd73a56bcd4b939755b41cd745621064.json
api/: .template.env  Cargo.toml  package-lock.json  package.json  schema.prisma  tsconfig.json
api/benches/: blog_comments.rs
api/migrations/20230816074502_init/: migration.sql
api/migrations/20230822101710_add_counters/: migration.sql
api/migrations/20240407062347_rename_oidc_to_oauth/: migration.sql
api/migrations/20240407065738_rename_identity_credentials_jsonb_provider_key/: migration.sql
api/migrations/20240408071301_add_identity_credential_identity_id_index/: migration.sql
api/prisma/: identityBench.ts  seed.ts
api/src/: blog.rs  config.rs  error.rs  github.html  github.rs  great_reads_feed.rs  index.ts  json.rs  main.rs  real_ip.rs  schema.rs  utils.rs
api/src/blog/: routes.rs
api/src/blog/comment/: create.rs  delete.rs  get.rs  mod.rs  patch.rs  test.sql
api/src/blog/models/: blog_comment.rs  blog_comment_vote.rs  blog_post.rs  mod.rs
api/src/crypto/: random.rs
api/src/discord/: agent.rs  bot.rs  channel.rs  constants.rs  message.rs  mod.rs
api/src/discord/tools/: discord_message.rs  fetch_content.rs  godbolt.rs  memory_delete.rs  memory_find.rs  memory_store.rs  memory_update.rs  mod.rs  qdrant_find.rs  qdrant_shared.rs  qdrant_store.rs  qdrant_update.rs  vector_client.rs  web_search.rs
api/src/github/: github.html  routes.rs
api/src/identity/: connected_apps.rs  mod.rs  routes.rs  spotify.rs
api/src/identity/models/: credential.rs  identity.rs  mod.rs  session.rs
api/src/models/: counter.rs  mod.rs  recommendation.rs
api/src/recommendation/: crawler.rs  engine.rs  mod.rs
api/src/telegram/: rebrandly.ts  setWebHook.ts  telegram.ts  utils.ts
apps/astro/: Image.astro  astro.config.mts  package.json  remark-images-to-components.ts  tailwind.config.js  tmp.json  tsconfig.json
apps/astro/plugins/: rehypeBlogPost.ts  remarkResponsiveImage.ts
apps/hhai.dev/: astro.config.mts  index.d.ts  package.json  tsconfig.json
apps/hhai.dev/app/: global.css  layout.tsx  page.tsx
apps/hhai.dev/plugins/: proxy.ts  rehypeBlogPost.ts  remarkDirective.ts  remarkResponsiveImage.ts
apps/hhai.dev/src/: config.ts  env.d.ts  rpc.ts  state.ts
apps/next-www/: contentlayer.config.ts  next.config.js  package.json  tailwind.config.js
apps/www/: astro.config.mjs  package.json
docker/: .gitignore  Caddyfile  docker-compose-open-webui.yml  docker-compose-windmill.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  hhai-dev-api.Dockerfile  hhai-dev-www.Dockerfile  prisma-migrator.Dockerfile  schema-migrator.Dockerfile  www.Dockerfile
docker/vector/: vector.toml
frontend/: .gitignore  404.html  common.css  index.css  index.html
frontend/cv/: index.css  index.html
prisma/: schema.prisma
prisma/migrations/20240213171922_identities_and_blog_comments/: migration.sql
prisma/migrations/20240213180313_add_oidc_credential_type/: migration.sql
prisma/migrations/20240214055413_cascade_delete_child_comments/: migration.sql
prisma/migrations/20240407114704_create_unique_oauth_credentials_constraint/: migration.sql
prisma/migrations/20240408071210_drop_identity_credential_unique_constraint/: migration.sql
prisma/migrations/20260121000000_add_recommendations/: migration.sql
prisma/migrations/20260127000000_add_recommendation_indexes/: migration.sql
prisma/migrations/20260128000000_add_metadata_submitted_at/: migration.sql
web/: astro.config.mts  package.json  tsconfig.json  vitest.config.ts
web/plugins/: rehypeBlogPost.test.ts  rehypeBlogPost.ts  rehypeCodeGroup.test.ts  rehypeCodeGroup.ts  remarkDirective.test.ts  remarkDirective.ts  remarkResponsiveImage.test.ts  remarkResponsiveImage.ts  shared.ts
web/src/: config.ts  content.config.ts  env.d.ts  state.ts
web/src/components/: BlogArticleList.astro  BlogResponsiveImage.astro  (+13 more)
(+182 files in other folders)
