[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
retainer = "0.4.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
mimalloc = "0.1.43"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
base64 = "0.22.1"
reqwest = { version = "0.12.24", features = ["json"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
time = "0.3.36"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry"] }
backtrace = "0.3.74"
thiserror = "2.0.17"
ipnetwork = "0.21.1"
rspotify = "0.15.3"
diesel = { version = "2.3.3", features = ["postgres", "serde_json", "chrono"] }
diesel-async = { version = "0.7.4", features = ["deadpool", "postgres"] }
eyre = "0.6.12"
serenity = "0.12.4"
regex = "1.11.1"
const_format = "0.2.34"
futures = "0.3.31"
article_scraper = "2.1.2"
url = "2.5.4"
rig-core = { git = "https://github.com/0xPlaygrounds/rig" }
chromadb = "2.2.2"
fastembed = "=5.8.0" # 5.8.1 has linking problems on macos
uuid = { version = "1.17.0", features = ["v4"] }
arc-swap = "1.7.1"
scc = "3.4.2"
async-trait = "0.1.89"
governor = "0.10.4"
html-to-markdown-rs = "2.23.4"
pgvector = { version = "0.4.1", features = ["diesel", "serde"] }
robotxt = "0.6.1"
text-splitter = { version = "0.28.0", features = ["markdown"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
deadpool-runtime = { version = "0.1.4", features = ["tokio_1"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "blog_comments"
harness = false
