[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.51.1", features = ["full"] }
retainer = "0.4.0"
dotenv = "0.15.0"
futures-util = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
rand = "0.10.1"
mimalloc = { version = "0.1.48", features = ["v3"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
time = "0.3.47"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "registry"] }
backtrace = "0.3.76"
thiserror = "2.0.18"
ipnetwork = "0.21.1"
rspotify = "0.16.0"
diesel = { version = "2.3.3", features = ["postgres", "serde_json", "chrono"] }
diesel-async = { version = "0.8.0", features = ["deadpool", "postgres"] }
eyre = "0.6.12"
serenity = "0.12.5"
regex = "1.12.3"
const_format = "0.2.35"
futures = "0.3.32"
article_scraper = "2.3.1"
url = "2.5.8"
rig-core = "0.35.0"
chromadb = "2.3.0"
fastembed = "=5.13.2"
uuid = { version = "1.23.0", features = ["v4"] }
arc-swap = "1.9.1"
scc = "3.7.0"
async-trait = "0.1.89"
governor = "0.10.4"
html-to-markdown-rs = "3.1.0"
pgvector = { version = "0.4.1", features = ["diesel", "serde"] }
robotxt = "0.6.1"
text-splitter = { version = "0.29.3", features = ["markdown"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
deadpool-runtime = { version = "0.3.1", features = ["tokio_1"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "blog_comments"
harness = false
