[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
retainer = "0.4.0"
dotenv = "0.15.0"
futures-util = "0.3.32"
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
rand = "0.10.1"
# mimalloc v3 is the default since 0.1.49, so no feature flag is needed.
mimalloc = "0.1.52"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
base64 = "0.22.1"
reqwest = { version = "0.13.4", features = ["json"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
time = "0.3.51"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "registry"] }
backtrace = "0.3.76"
thiserror = "2.0.18"
ipnetwork = "0.21.1"
rspotify = "0.16.1"
diesel = { version = "2.3.10", features = ["postgres", "serde_json", "chrono"] }
diesel-async = { version = "0.9.2", features = ["deadpool", "postgres"] }
eyre = "0.6.12"
serenity = "0.12.5"
regex = "1.12.4"
const_format = "0.2.36"
futures = "0.3.32"
article_scraper = "2.3.1"
url = "2.5.8"
rig = { package = "rig-core", version = "0.39.0" }
chromadb = "2.3.0"
fastembed = "=5.17.2"
uuid = { version = "1.23.3", features = ["v4"] }
arc-swap = "1.9.1"
scc = "3.8.3"
async-trait = "0.1.89"
governor = "0.10.4"
html-to-markdown-rs = "3.7.2"
pgvector = { version = "0.4.2", features = ["diesel", "serde"] }
robotxt = "0.6.1"
text-splitter = { version = "0.32.0", features = ["markdown"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
deadpool-runtime = { version = "0.3.1", features = ["tokio_1"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "blog_comments"
harness = false
